--- a/src/style/ProductPage.module.css
+++ b/src/style/ProductPage.module.css
@@ -9,7 +9,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
-  gap: 50px;
+  gap: 40px;
 }
 
 .productPage img {
@@ -18,6 +18,10 @@
   border-radius: 10px;
   padding: 20px;
   background-color: white;
+}
+
+.productPage p {
+  margin: 15px 0;
 }
 
 .rating {
@@ -40,7 +44,7 @@
 .purchase {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 15px;
   align-items: start;
 }
 
@@ -71,5 +75,6 @@
 @media (max-width: 600px) {
   .productPage {
     grid-template-columns: 1fr;
+    gap: 0;
   }
 }
